--- a/monitor/pom.xml
+++ b/monitor/pom.xml
@@ -1,10 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.interface</groupId>
-    <artifactId>bank-interface</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-  </parent>
-  <artifactId>monitor</artifactId>
-  <name>bank interface monitor</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.interface</groupId>
+        <artifactId>bank-interface</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </parent>
+    <groupId>bank-interface</groupId>
+    <artifactId>monitor</artifactId>
+    <name>bank interface monitor</name>
 </project>
