move json package to core module from api module

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,6 +28,16 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
         </dependency>
+                <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
